Removed Checker Framework (For Now)